2018.3~2018.9/代码武器库（C++版）/容器类代码/Unordered_map运行原理探索/a.txt
In file included from f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\unordered_map:41:0,
                 from PwhTest.cpp:2:
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\tuple: In instantiation of 'std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {const Pwh&}; unsigned int ..._Indexes1 = {0u}; _Args2 = {}; unsigned int ..._Indexes2 = {}; _T1 = const Pwh; _T2 = Pwh&]':
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\tuple:1575:63:   required from 'std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {const Pwh&}; _Args2 = {}; _T1 = const Pwh; _T2 = Pwh&]'
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:120:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const Pwh, Pwh&>; _Args = {const std::piecewise_construct_t&, std::tuple<const Pwh&>, std::tuple<>}; _Tp = std::pair<const Pwh, Pwh&>]'
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\alloc_traits.h:455:4:   required from 'static void std::allocator_traits<std::allocator<_CharT> >::construct(std::allocator_traits<std::allocator<_CharT> >::allocator_type&, _Up*, _Args&& ...) [with _Up = std::pair<const Pwh, Pwh&>; _Args = {const std::piecewise_construct_t&, std::tuple<const Pwh&>, std::tuple<>}; _Tp = std::pair<const Pwh, Pwh&>; std::allocator_traits<std::allocator<_CharT> >::allocator_type = std::allocator<std::pair<const Pwh, Pwh&> >]'
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\hashtable_policy.h:1953:37:   required from 'std::__detail::_Hashtable_alloc<_NodeAlloc>::__node_type* std::__detail::_Hashtable_alloc<_NodeAlloc>::_M_allocate_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const Pwh&>, std::tuple<>}; _NodeAlloc = std::allocator<std::__detail::_Hash_node<std::pair<const Pwh, Pwh&>, true> >; std::__detail::_Hashtable_alloc<_NodeAlloc>::__node_type = std::__detail::_Hash_node<std::pair<const Pwh, Pwh&>, true>]'
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\hashtable_policy.h:595:8:   required from 'std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::mapped_type& std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::operator[](const key_type&) [with _Key = Pwh; _Pair = std::pair<const Pwh, Pwh&>; _Alloc = std::allocator<std::pair<const Pwh, Pwh&> >; _Equal = std::equal_to<Pwh>; _H1 = hash_name_token; _H2 = std::__detail::_Mod_range_hashing; _Hash = std::__detail::_Default_ranged_hash; _RehashPolicy = std::__detail::_Prime_rehash_policy; _Traits = std::__detail::_Hashtable_traits<true, false, true>; std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::mapped_type = Pwh&; std::__detail::_Map_base<_Key, _Pair, _Alloc, std::__detail::_Select1st, _Equal, _H1, _H2, _Hash, _RehashPolicy, _Traits, true>::key_type = Pwh]'
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\unordered_map.h:904:20:   required from 'std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type& std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::operator[](const key_type&) [with _Key = Pwh; _Tp = Pwh&; _Hash = hash_name_token; _Pred = std::equal_to<Pwh>; _Alloc = std::allocator<std::pair<const Pwh, Pwh&> >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type = Pwh&; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::key_type = Pwh]'
PwhTest.cpp:47:10:   required from here
f:\mingw\lib\gcc\mingw32\6.3.0\include\c++\tuple:1586:70: error: value-initialization of reference type 'Pwh&'
         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
                                                                      ^
